--- a/frontend/src/_metronic/i18n/messages/en.json
+++ b/frontend/src/_metronic/i18n/messages/en.json
@@ -65,5 +65,15 @@
   "ECOMMERCE.CUSTOMERS.UPDATE_STATUS.TITLE": "Status has been updated for selected customers",
   "ECOMMERCE.CUSTOMERS.UPDATE_STATUS.MESSAGE": "Selected customers status have successfully been updated",
   "ECOMMERCE.CUSTOMERS.EDIT.UPDATE_MESSAGE": "Customer has been updated",
-  "ECOMMERCE.CUSTOMERS.EDIT.ADD_MESSAGE": "Customer has been created"
+  "ECOMMERCE.CUSTOMERS.EDIT.ADD_MESSAGE": "Customer has been created",
+
+  "Approvals.Main.Title": "Pending Approvals",
+  
+  "Dashboard.New.Speaker": "New Speaker",
+  "Dashboard.New.Event": "New Event",
+  "Dashboard.New.User": "New User",
+  "Dashboard.Approvals": "Approvals",
+  "Dashboard.Welcome": "Welcome",
+
+  "User.Form.Title": "Create User"
 }
