event add listing and user edit

--- a/frontend/src/_metronic/i18n/messages/en.json
+++ b/frontend/src/_metronic/i18n/messages/en.json
@@ -82,5 +82,6 @@
   "Speaker.List.Title": "Speakers List",
 
   "User.Registration.Title": "Create User",
+  "User.Edit.Title": "Edit User",
   "User.List.Title": "Users List"
 }
