--- a/frontend/src/_metronic/i18n/messages/pt.json
+++ b/frontend/src/_metronic/i18n/messages/pt.json
@@ -1,3 +1,66 @@
 {
-  "TRANSLATOR.SELECT": "Select your language"
+  "TRANSLATOR.SELECT": "Select your language",
+
+
+  
+  "Speaker.Registration.Title": "Registro de palestrante",
+  "Speaker.Registration.Form.F_Flag": "Bandeira Estrangeira",
+  "Speaker.Registration.Form.Accept_Info": "Aceitar regra de informação",
+  "Speaker.Registration.Form.F_Name": "Nome completo",
+  "Speaker.Registration.Form.Fath_Name": "Nome do pai",
+  "Speaker.Registration.Form.Moth_Name": "Nome da mãe",
+  "Speaker.Registration.Form.Birthday": "Aniversário ",
+  "Speaker.Registration.Form.Birth_p": "Local de nascimento ",
+  "Speaker.Registration.Form.Civil_state": "Estado civil ",
+  "Speaker.Registration.Form.Scholarity": "Escolaridade",
+  "Speaker.Registration.Form.Social_No": " Número Social",
+  "Speaker.Registration.Form.Service_prov": "Provedor de serviço ",
+  "Speaker.Registration.Form.Country": "País",
+  "Speaker.Registration.Form.state_OR_province": "Estado / Província",
+  "Speaker.Registration.Form.City": "Cidade",
+  "Speaker.Registration.Form.Neighborhood": " Neighborhood",
+  "Speaker.Registration.Form.Cep_OR_Zip": " CEP/ZIP",
+  "Speaker.Registration.Form.DDD": " DDD",
+  "Speaker.Registration.Form.Address": " Address",
+  "Speaker.Registration.Form.Id_No": "ID Number ",
+  "Speaker.Registration.Form.Document_issue_Date": "Document Issue Date ",
+  "Speaker.Registration.Form.Emitting_Organ": "emitting organ ",
+  "Speaker.Registration.Form.Email": "Email ",
+  "Speaker.Registration.Form.Mobile": "Mobile ",
+  "Speaker.Registration.Form.Fax": "FAX ",
+  "Speaker.Registration.Form.Linkedin_Url": "LinkedIn URL ",
+  "Speaker.Registration.Form.Latter_Url": "Lattes URL ",
+  "Speaker.Registration.Form.Orcid_Url": "ORCID Link ",
+  "Speaker.Registration.Form.Reg_City": "Registration in City ",
+  "Speaker.Registration.Form.Social_sec": "Social Security Contributor",
+
+
+  "Speaker.List.Title": "Speakers List",
+  "Speaker.List.Column.Name": "Name",
+  "Speaker.List.Column.F_Name": "Father Name",
+  "Speaker.List.Column.Mobile_No": "Mobile No",
+  "Speaker.List.Column.Email": "Email",
+  "Speaker.List.Column.City": "City",
+
+  "User.Registration.Title": "Create User",
+  "User.Registration.Form.Email": "Email",
+  "User.Registration.Form.User_Name": "Username",
+  "User.Registration.Form.Business_Unit": "Business Unit",
+  "User.Registration.Form.Password": "Password",
+
+  "User.Edit.Title": "Edit User",
+  "User.Edit.Form.F_Name": "First Name",
+  "User.Edit.Form.L_Name": "Last Name",
+  "User.Edit.Form.Email": "Email",
+  "User.Edit.Form.U_Name": "Username",
+  "User.Edit.Form.Business_Unit": "business unit",
+  "User.Edit.Form.Group": "Group",
+ 
+  
+  "User.List.Title": "Users List",
+  "User.List.Column.User_Name":"Username",
+  "User.List.Column.First_Name":"First Name",
+  "User.List.Column.Last_Name":"Last Name",
+  "User.List.Column.Email":"Email",
+  "User.List.Column.Bus_Un":"business unit"
 }
