--- a/frontend/src/_metronic/i18n/messages/pt.json
+++ b/frontend/src/_metronic/i18n/messages/pt.json
@@ -2,6 +2,107 @@
   "TRANSLATOR.SELECT": "Select your language",
 
 
+
+
+
+  "MENU.NEW": "nova",
+  "MENU.ACTIONS": "Ações",
+  "MENU.CREATE_POST": "Criar nova postagem",
+  "MENU.PAGES": "Páginas",
+  "MENU.FEATURES": "Características",
+  "MENU.APPS": "Apps",
+  "MENU.DASHBOARD": "painel de controle",
+  "AUTH.GENERAL.OR": "Ou",
+  "AUTH.GENERAL.SUBMIT_BUTTON": "Enviar",
+  "AUTH.GENERAL.NO_ACCOUNT": "Não tem conta?",
+  "AUTH.GENERAL.SIGNUP_BUTTON": "Inscrever-se",
+  "AUTH.GENERAL.FORGOT_BUTTON": "Esqueceu a senha",
+  "AUTH.GENERAL.BACK_BUTTON": "Costas",
+  "AUTH.GENERAL.PRIVACY": "Privacidade",
+  "AUTH.GENERAL.LEGAL": "Legal",
+  "AUTH.GENERAL.CONTACT": "Contato",
+  "AUTH.LOGIN.TITLE": "Conta de login",
+  "AUTH.LOGIN.BUTTON": "Assinar em",
+  "AUTH.FORGOT.TITLE": "Palavra-chave esquecida?",
+  "AUTH.FORGOT.DESC": "Insira seu e-mail para redefinir sua senha",
+  "AUTH.FORGOT.SUCCESS": "Sua conta foi redefinida com sucesso.",
+  "AUTH.REGISTER.TITLE": "Sign Up",
+  "AUTH.REGISTER.DESC": "Insira seus dados para criar sua conta",
+  "AUTH.REGISTER.SUCCESS": "Sua conta foi registrada com sucesso.",
+  "AUTH.INPUT.EMAIL": "O email",
+  "AUTH.INPUT.FULLNAME": "Nome completo",
+  "AUTH.INPUT.PASSWORD": "Senha",
+  "AUTH.INPUT.CONFIRM_PASSWORD": "Confirme a Senha",
+  "AUTH.INPUT.USERNAME": "Nome do usuário",
+  "AUTH.VALIDATION.INVALID": "{nome} não é válido",
+  "AUTH.VALIDATION.REQUIRED": "{nome} é obrigatório",
+  "AUTH.VALIDATION.MIN_LENGTH": "o comprimento mínimo de {nome}} é {{min}",
+  "AUTH.VALIDATION.AGREEMENT_REQUIRED": "A aceitação dos termos e condições é obrigatória",
+  "AUTH.VALIDATION.NOT_FOUND": "O {nome} solicitado não foi encontrado",
+  "AUTH.VALIDATION.INVALID_LOGIN": "Os detalhes de login estão incorretos",
+  "AUTH.VALIDATION.REQUIRED_FIELD": "Campo obrigatório",
+  "AUTH.VALIDATION.MIN_LENGTH_FIELD": "Comprimento mínimo do campo:",
+  "AUTH.VALIDATION.MAX_LENGTH_FIELD": "Comprimento máximo do campo:",
+  "AUTH.VALIDATION.INVALID_FIELD": "O campo não é válido",
+  "ECOMMERCE.COMMON.SELECTED_RECORDS_COUNT": "Contagem de registros selecionados:",
+  "ECOMMERCE.COMMON.ALL": "Todos",
+  "ECOMMERCE.COMMON.SUSPENDED": "Suspenso",
+  "ECOMMERCE.COMMON.ACTIVE": "Ativo",
+  "ECOMMERCE.COMMON.FILTER": "Filtro",
+  "ECOMMERCE.COMMON.BY_STATUS": "por status",
+  "ECOMMERCE.COMMON.BY_TYPE": "por tipo",
+  "ECOMMERCE.COMMON.BUSINESS": "O negócio",
+  "ECOMMERCE.COMMON.INDIVIDUAL": "Individual",
+  "ECOMMERCE.COMMON.SEARCH": "Pesquisa",
+  "ECOMMERCE.COMMON.IN_ALL_FIELDS": "em todos os campos",
+  "ECOMMERCE.ECOMMERCE": "comércio eletrônico",
+  "ECOMMERCE.CUSTOMERS.CUSTOMERS": "clientes",
+  "ECOMMERCE.CUSTOMERS.CUSTOMERS_LIST": "Lista de clientes",
+  "ECOMMERCE.CUSTOMERS.NEW_CUSTOMER": "Novo cliente",
+  "ECOMMERCE.CUSTOMERS.DELETE_CUSTOMER_SIMPLE.TITLE": "Exclusão do cliente",
+  "ECOMMERCE.CUSTOMERS.DELETE_CUSTOMER_SIMPLE.DESCRIPTION": "Tem certeza de que deseja excluir este cliente permanentemente?",
+  "ECOMMERCE.CUSTOMERS.DELETE_CUSTOMER_SIMPLE.WAIT_DESCRIPTION": "O cliente está excluindo ...",
+  "ECOMMERCE.CUSTOMERS.DELETE_CUSTOMER_SIMPLE.MESSAGE": "O cliente foi excluído",
+  "ECOMMERCE.CUSTOMERS.DELETE_CUSTOMER_MULTY.TITLE": "Clientes Excluir",
+  "ECOMMERCE.CUSTOMERS.DELETE_CUSTOMER_MULTY.DESCRIPTION": "Tem certeza de que deseja excluir permanentemente os clientes selecionados?",
+  "ECOMMERCE.CUSTOMERS.DELETE_CUSTOMER_MULTY.WAIT_DESCRIPTION": "Os clientes estão excluindo ...",
+  "ECOMMERCE.CUSTOMERS.DELETE_CUSTOMER_MULTY.MESSAGE": "Os clientes selecionados foram excluídos",
+  "ECOMMERCE.CUSTOMERS.UPDATE_STATUS.TITLE": "O status foi atualizado para clientes selecionados",
+  "ECOMMERCE.CUSTOMERS.UPDATE_STATUS.MESSAGE": "O status dos clientes selecionados foi atualizado com sucesso",
+  "ECOMMERCE.CUSTOMERS.EDIT.UPDATE_MESSAGE": "O cliente foi atualizado",
+  "ECOMMERCE.CUSTOMERS.EDIT.ADD_MESSAGE": "O cliente foi criado",
+
+  "Approval.List.Title": "Aprovações pendentes",
+  
+  "Dashboard.New.Speaker": "Novo Palestrante",
+  "Dashboard.New.Event": "Novo evento",
+  "Dashboard.New.User": "Novo usuário",
+  "Dashboard.Approvals": "Aprovações",
+  "Dashboard.Welcome": "Bem-vinda",
+
+
+
+
+
+  
+  "Event.Create.Title": "Registro de Evento ",
+
+  "Event.Create.Eve_Name": "Nome do evento",
+  "Event.Create.Type": "Tipo ",
+  "Event.Create.Date": "Encontro",
+  "Event.Create.Duration": "Duração ",
+  "Event.Create.Web_OR_pres": "Web / Presencial",
+
+  "Event.List.Title": "Lista de Eventos",
+
+  "Event.List.Column.Name": "Nome",
+  "Event.List.Column.Country": "País",
+  "Event.List.Column.City": "Cidade",
+  "Event.List.Column.Date": "Encontro",
+  "Event.List.Column.Type": "Tipo",
+  "Event.List.Column.Action": " Açao",
+
+
   
   "Speaker.Registration.Title": "Registro de palestrante",
   "Speaker.Registration.Form.F_Flag": "Bandeira Estrangeira",
@@ -18,49 +119,49 @@
   "Speaker.Registration.Form.Country": "País",
   "Speaker.Registration.Form.state_OR_province": "Estado / Província",
   "Speaker.Registration.Form.City": "Cidade",
-  "Speaker.Registration.Form.Neighborhood": " Neighborhood",
+  "Speaker.Registration.Form.Neighborhood": " Vizinhança",
   "Speaker.Registration.Form.Cep_OR_Zip": " CEP/ZIP",
   "Speaker.Registration.Form.DDD": " DDD",
-  "Speaker.Registration.Form.Address": " Address",
-  "Speaker.Registration.Form.Id_No": "ID Number ",
-  "Speaker.Registration.Form.Document_issue_Date": "Document Issue Date ",
-  "Speaker.Registration.Form.Emitting_Organ": "emitting organ ",
-  "Speaker.Registration.Form.Email": "Email ",
-  "Speaker.Registration.Form.Mobile": "Mobile ",
+  "Speaker.Registration.Form.Address": " Endereço",
+  "Speaker.Registration.Form.Id_No": "Número de identidade ",
+  "Speaker.Registration.Form.Document_issue_Date": "Data de Emissão do Documento",
+  "Speaker.Registration.Form.Emitting_Organ": "órgão emissor",
+  "Speaker.Registration.Form.Email": "O Email",
+  "Speaker.Registration.Form.Mobile": "Móvel",
   "Speaker.Registration.Form.Fax": "FAX ",
-  "Speaker.Registration.Form.Linkedin_Url": "LinkedIn URL ",
-  "Speaker.Registration.Form.Latter_Url": "Lattes URL ",
-  "Speaker.Registration.Form.Orcid_Url": "ORCID Link ",
-  "Speaker.Registration.Form.Reg_City": "Registration in City ",
-  "Speaker.Registration.Form.Social_sec": "Social Security Contributor",
+  "Speaker.Registration.Form.Linkedin_Url": "URL do LinkedIn ",
+  "Speaker.Registration.Form.Latter_Url": "URL Lattes ",
+  "Speaker.Registration.Form.Orcid_Url": "Link ORCID ",
+  "Speaker.Registration.Form.Reg_City": "Registro na cidade",
+  "Speaker.Registration.Form.Social_sec": "Contribuidor da Previdência Social",
 
 
-  "Speaker.List.Title": "Speakers List",
-  "Speaker.List.Column.Name": "Name",
-  "Speaker.List.Column.F_Name": "Father Name",
-  "Speaker.List.Column.Mobile_No": "Mobile No",
-  "Speaker.List.Column.Email": "Email",
-  "Speaker.List.Column.City": "City",
+  "Speaker.List.Title": "Lista de Oradores",
+  "Speaker.List.Column.Name": "Nome",
+  "Speaker.List.Column.F_Name": " Nome do pai",
+  "Speaker.List.Column.Mobile_No": "Celular Não",
+  "Speaker.List.Column.Email": "O email",
+  "Speaker.List.Column.City": "Cidade",
 
-  "User.Registration.Title": "Create User",
-  "User.Registration.Form.Email": "Email",
-  "User.Registration.Form.User_Name": "Username",
-  "User.Registration.Form.Business_Unit": "Business Unit",
-  "User.Registration.Form.Password": "Password",
+  "User.Registration.Title": "Criar usuário",
+  "User.Registration.Form.Email": "O email",
+  "User.Registration.Form.User_Name": "Nome do usuário",
+  "User.Registration.Form.Business_Unit": "Unidade de negócio",
+  "User.Registration.Form.Password": "Senha",
 
-  "User.Edit.Title": "Edit User",
-  "User.Edit.Form.F_Name": "First Name",
-  "User.Edit.Form.L_Name": "Last Name",
-  "User.Edit.Form.Email": "Email",
-  "User.Edit.Form.U_Name": "Username",
-  "User.Edit.Form.Business_Unit": "business unit",
-  "User.Edit.Form.Group": "Group",
+  "User.Edit.Title": "Editar usuário",
+  "User.Edit.Form.F_Name": "Primeiro nome",
+  "User.Edit.Form.L_Name": "Último nome",
+  "User.Edit.Form.Email": "O email",
+  "User.Edit.Form.U_Name": "Nome do usuário",
+  "User.Edit.Form.Business_Unit": "unidade de negócio",
+  "User.Edit.Form.Group": " Grupo",
  
   
-  "User.List.Title": "Users List",
-  "User.List.Column.User_Name":"Username",
-  "User.List.Column.First_Name":"First Name",
-  "User.List.Column.Last_Name":"Last Name",
-  "User.List.Column.Email":"Email",
-  "User.List.Column.Bus_Un":"business unit"
+  "User.List.Title": "Lista de Usuários",
+  "User.List.Column.User_Name":"Nome do usuário",
+  "User.List.Column.First_Name":"Primeiro nome",
+  "User.List.Column.Last_Name":"Último nome",
+  "User.List.Column.Email":"O email",
+  "User.List.Column.Bus_Un":"unidade de negóc"
 }
