Translation and Speaker Form validation

--- a/frontend/src/_metronic/i18n/messages/pt.json
+++ b/frontend/src/_metronic/i18n/messages/pt.json
@@ -29,7 +29,7 @@
   "AUTH.REGISTER.TITLE": "Sign Up",
   "AUTH.REGISTER.DESC": "Insira seus dados para criar sua conta",
   "AUTH.REGISTER.SUCCESS": "Sua conta foi registrada com sucesso.",
-  "AUTH.INPUT.EMAIL": "O email",
+  "AUTH.INPUT.EMAIL": "E-mail",
   "AUTH.INPUT.FULLNAME": "Nome completo",
   "AUTH.INPUT.PASSWORD": "Senha",
   "AUTH.INPUT.CONFIRM_PASSWORD": "Confirme a Senha",
@@ -105,29 +105,29 @@
 
   
   "Speaker.Registration.Title": "Registro de palestrante",
-  "Speaker.Registration.Form.F_Flag": "Bandeira Estrangeira",
-  "Speaker.Registration.Form.Accept_Info": "Aceitar regra de informação",
+  "Speaker.Registration.Form.F_Flag": "Estrangeiro (a)",
+  "Speaker.Registration.Form.Accept_Info": "Aceita que a empresa use seus dados para usos internos da empresa?",
   "Speaker.Registration.Form.F_Name": "Nome completo",
   "Speaker.Registration.Form.Fath_Name": "Nome do pai",
   "Speaker.Registration.Form.Moth_Name": "Nome da mãe",
-  "Speaker.Registration.Form.Birthday": "Aniversário ",
+  "Speaker.Registration.Form.Birthday": "Date de Nascimento",
   "Speaker.Registration.Form.Birth_p": "Local de nascimento ",
-  "Speaker.Registration.Form.Civil_state": "Estado civil ",
+  "Speaker.Registration.Form.Civil_state": "Divorciado(a),Outros ",
   "Speaker.Registration.Form.Scholarity": "Escolaridade",
-  "Speaker.Registration.Form.Social_No": " Número Social",
-  "Speaker.Registration.Form.Service_prov": "Provedor de serviço ",
-  "Speaker.Registration.Form.Country": "País",
-  "Speaker.Registration.Form.state_OR_province": "Estado / Província",
+  "Speaker.Registration.Form.Social_No": " CPF",
+  "Speaker.Registration.Form.Service_prov": "Órgão Emissor ",
+  "Speaker.Registration.Form.Country": "Brasil (Brasil as default)",
+  "Speaker.Registration.Form.state_OR_province": "Estado / UF",
   "Speaker.Registration.Form.City": "Cidade",
-  "Speaker.Registration.Form.Neighborhood": " Vizinhança",
+  "Speaker.Registration.Form.Neighborhood": " Bairro",
   "Speaker.Registration.Form.Cep_OR_Zip": " CEP/ZIP",
   "Speaker.Registration.Form.DDD": " DDD",
   "Speaker.Registration.Form.Address": " Endereço",
   "Speaker.Registration.Form.Id_No": "Número de identidade ",
   "Speaker.Registration.Form.Document_issue_Date": "Data de Emissão do Documento",
   "Speaker.Registration.Form.Emitting_Organ": "órgão emissor",
-  "Speaker.Registration.Form.Email": "O Email",
-  "Speaker.Registration.Form.Mobile": "Móvel",
+  "Speaker.Registration.Form.Email": "E-mail",
+  "Speaker.Registration.Form.Mobile": "Celular",
   "Speaker.Registration.Form.Fax": "FAX ",
   "Speaker.Registration.Form.Linkedin_Url": "URL do LinkedIn ",
   "Speaker.Registration.Form.Latter_Url": "URL Lattes ",
@@ -139,13 +139,13 @@
   "Speaker.List.Title": "Lista de Oradores",
   "Speaker.List.Column.Name": "Nome",
   "Speaker.List.Column.F_Name": " Nome do pai",
-  "Speaker.List.Column.Mobile_No": "Celular Não",
-  "Speaker.List.Column.Email": "O email",
+  "Speaker.List.Column.Mobile_No": "Celular",
+  "Speaker.List.Column.Email": "E-mail",
   "Speaker.List.Column.City": "Cidade",
   "Speaker.List.Column.Action":"Açao",
 
   "User.Registration.Title": "Criar usuário",
-  "User.Registration.Form.Email": "O email",
+  "User.Registration.Form.Email": "E-mail",
   "User.Registration.Form.User_Name": "Nome do usuário",
   "User.Registration.Form.Business_Unit": "Unidade de negócio",
   "User.Registration.Form.Password": "Senha",
@@ -153,7 +153,7 @@
   "User.Edit.Title": "Editar usuário",
   "User.Edit.Form.F_Name": "Primeiro nome",
   "User.Edit.Form.L_Name": "Último nome",
-  "User.Edit.Form.Email": "O email",
+  "User.Edit.Form.Email": "E-mail",
   "User.Edit.Form.U_Name": "Nome do usuário",
   "User.Edit.Form.Business_Unit": "unidade de negócio",
   "User.Edit.Form.Group": " Grupo",
@@ -163,7 +163,7 @@
   "User.List.Column.User_Name":"Nome do usuário",
   "User.List.Column.First_Name":"Primeiro nome",
   "User.List.Column.Last_Name":"Último nome",
-  "User.List.Column.Email":"O email",
+  "User.List.Column.Email":"E-mail",
   "User.List.Column.Bus_Un":"unidade de negóc",
   "User.List.Column.Action":"Açao"
 }
