--- a/frontend/src/_metronic/i18n/messages/en.json
+++ b/frontend/src/_metronic/i18n/messages/en.json
@@ -91,6 +91,11 @@
   "Event.List.Column.Date": "Date",
   "Event.List.Column.Type": "Type",
   "Event.List.Column.Action": "Action",
+  "Event.List.Column.Solicitant": "Solicitant Name",
+  "Event.List.Column.Department": "Department",
+  "Event.List.Column.Cost": "Cost Center",
+  "Event.List.Column.Speaker": "Speaker Name",
+  "Event.List.Column.Virtual": "Virtual / Presential",
 
   "Speaker.Registration.Title": "Speaker Registration",
   "Speaker.Registration.Form.F_Flag": "Foreign Flag",
