--- a/frontend/src/_metronic/i18n/messages/pt.json
+++ b/frontend/src/_metronic/i18n/messages/pt.json
@@ -80,6 +80,11 @@
   "Dashboard.Approvals": "Aprovações",
   "Dashboard.Welcome": "Bem-vinda",
 
+  "Sidebar.New.Speaker": "Palestrante",
+  "Sidebar.New.Event": "evento",
+  "Sidebar.New.User": "usuário",
+  "Sidebar.Approvals": "Aprovações",
+
 
 
 
