Frontend Changes Taimor

--- a/frontend/src/_metronic/i18n/messages/pt.json
+++ b/frontend/src/_metronic/i18n/messages/pt.json
@@ -78,7 +78,7 @@
   "Dashboard.New.Event": "Novo evento",
   "Dashboard.New.User": "Novo usuário",
   "Dashboard.Approvals": "Aprovações",
-  "Dashboard.Welcome": "Bem-vinda",
+  "Dashboard.Welcome": "Bem-vindo",
 
   "Sidebar.New.Speaker": "Palestrante",
   "Sidebar.New.Event": "Evento",
@@ -116,11 +116,11 @@
   "Speaker.Registration.Form.Moth_Name": "Nome da mãe",
   "Speaker.Registration.Form.Birthday": "Date de Nascimento",
   "Speaker.Registration.Form.Birth_p": "Local de nascimento ",
-  "Speaker.Registration.Form.Civil_state": "Divorciado(a),Outros ",
+  "Speaker.Registration.Form.Civil_state": "Estado Civil ",
   "Speaker.Registration.Form.Scholarity": "Escolaridade",
   "Speaker.Registration.Form.Social_No": " CPF",
   "Speaker.Registration.Form.Service_prov": "Órgão Emissor ",
-  "Speaker.Registration.Form.Country": "Brasil (Brasil as default)",
+  "Speaker.Registration.Form.Country": "País",
   "Speaker.Registration.Form.state_OR_province": "Estado / UF",
   "Speaker.Registration.Form.City": "Cidade",
   "Speaker.Registration.Form.Neighborhood": " Bairro",
@@ -136,8 +136,9 @@
   "Speaker.Registration.Form.Linkedin_Url": "URL do LinkedIn ",
   "Speaker.Registration.Form.Latter_Url": "URL Lattes ",
   "Speaker.Registration.Form.Orcid_Url": "Link ORCID ",
-  "Speaker.Registration.Form.Reg_City": "Registro na cidade",
-  "Speaker.Registration.Form.Social_sec": "Contribuidor da Previdência Social",
+  "Speaker.Registration.Form.Reg_City": "possui cadastro junta ao CCM-Cadastro de Contribuintes",
+  "Speaker.Registration.Form.Reg_City2": "imobiliários (Prefeitura)?",
+  "Speaker.Registration.Form.Social_sec": "É contribuinte do INSS (Previdência Social)?",
 
 
   "Speaker.List.Title": "Lista de Oradores",
