Modification in frontened by taimoor khan

--- a/frontend/src/_metronic/i18n/messages/en.json
+++ b/frontend/src/_metronic/i18n/messages/en.json
@@ -133,6 +133,7 @@
   "Speaker.Registration.Form.Latter_Url": "Lattes URL ",
   "Speaker.Registration.Form.Orcid_Url": "ORCID Link ",
   "Speaker.Registration.Form.Reg_City": "Registration in City ",
+  "Speaker.Registration.Form.Reg_City2": " ",
   "Speaker.Registration.Form.Social_sec": "Social Security Contributor",
 
 
