taimour frontend changes updated

--- a/frontend/src/_metronic/i18n/messages/en.json
+++ b/frontend/src/_metronic/i18n/messages/en.json
@@ -136,6 +136,21 @@
   "Speaker.Registration.Form.Reg_City2": " ",
   "Speaker.Registration.Form.Social_sec": "Social Security Contributor",
 
+  "Speaker.Registration.Form.National_ID": "National ID",
+  "Speaker.Registration.Form.Company_Name": "Company Name",
+  "Speaker.Registration.Form.CPF" : "CPF (Brazillian only)",
+  "Speaker.Registration.Form.CNPJ" : "CNPJ (Brazillian only)",
+  "Speaker.Registration.Form.UF-CRM" : "UF - CRM",
+  "Speaker.Registration.Form.UF_City" : "UF/City",
+  "Speaker.Registration.Form.Specialy" : "Select Speciaity",
+  "Speaker.Registration.Form.Address2" : "Address",
+  "Speaker.Registration.Form.Select_Tier" : "Tier",
+  "Speaker.Registration.Form.IBAN" : "IBAN/Account",
+  "Speaker.Registration.Form.Agency" : "Agency",
+  "Speaker.Registration.Form.Swift" : "Swift",
+  "Speaker.Registration.Form.BankAddress" : "Bank Address",
+  "Speaker.Registration.Form.Bank_Name" : "Bank Name",
+  "Speaker.Registration.Form.AccountOwner" : "Account Owner",
 
   "Speaker.List.Title": "Speakers List",
   "Speaker.List.Column.Name": "Name",
