--- a/frontend/src/_metronic/i18n/messages/pt.json
+++ b/frontend/src/_metronic/i18n/messages/pt.json
@@ -139,6 +139,22 @@
   "Speaker.Registration.Form.Reg_City": "possui cadastro junta ao CCM-Cadastro de Contribuintes",
   "Speaker.Registration.Form.Reg_City2": "imobiliários (Prefeitura)?",
   "Speaker.Registration.Form.Social_sec": "É contribuinte do INSS (Previdência Social)?",
+  
+  "Speaker.Registration.Form.National_ID": "Identidade Nacional",
+  "Speaker.Registration.Form.Company_Name": "Nome da Empresa",
+  "Speaker.Registration.Form.CPF" : "CPF (Somente brasileiro)",
+  "Speaker.Registration.Form.CNPJ" : "CNPJ ",
+  "Speaker.Registration.Form.UF-CRM" : "UF - CRM",
+  "Speaker.Registration.Form.UF_City" : "UF/Cidade",
+  "Speaker.Registration.Form.Specialy" : "Selecione especialidade",
+  "Speaker.Registration.Form.Address2" : "endereço",
+  "Speaker.Registration.Form.Select_Tier" : "Camada",
+  "Speaker.Registration.Form.IBAN" : "IBAN/Conta",
+  "Speaker.Registration.Form.Agency" : "Agência",
+  "Speaker.Registration.Form.Swift" : "Rápida",
+  "Speaker.Registration.Form.BankAddress" : "Endereço do banco",
+  "Speaker.Registration.Form.Bank_Name" : "Nome do banco",
+  "Speaker.Registration.Form.AccountOwner" : "Dono da conta",
 
   "Speaker.add_person_name":"NOME",
   "Speaker.add_person_relationship":"parentesco",
