--- a/frontend/src/_metronic/i18n/messages/en.json
+++ b/frontend/src/_metronic/i18n/messages/en.json
@@ -113,6 +113,8 @@
   "Event.List.Column.Speaker": "Speaker Name",
   "Event.List.Column.Role": "Select Role",
   "Event.List.Column.Virtual": "Virtual / Presential",
+  "Event.List.Column.Product": "Product",
+  "Event.List.Column.Percent": "Percent %",
 
   "Speaker.Registration.Title": "Speaker Registration",
   "Speaker.Registration.Form.F_Flag": "Foreign Flag",
