create & edit speaker and create & edit event and admin user check

--- a/frontend/src/_metronic/i18n/messages/pt.json
+++ b/frontend/src/_metronic/i18n/messages/pt.json
@@ -166,7 +166,7 @@
   "Speaker.Registration.Form.UF_City" : "UF/Cidade",
   "Speaker.Registration.Form.Specialy" : "Selecione especialidade",
   "Speaker.Registration.Form.Address2" : "endereço",
-  "Speaker.Registration.Form.Select_Tier" : "Camada",
+  "Speaker.Registration.Form.Select_Tier" : "Tier",
   "Speaker.Registration.Form.IBAN" : "IBAN/Conta",
   "Speaker.Registration.Form.Agency" : "Agência",
   "Speaker.Registration.Form.Swift" : "Rápida",
@@ -182,7 +182,7 @@
   "Speaker.Registration.Form.UF_City" : "UF/Cidade",
   "Speaker.Registration.Form.Specialy" : "Selecione especialidade",
   "Speaker.Registration.Form.Address2" : "endereço",
-  "Speaker.Registration.Form.Select_Tier" : "Selecionar camada",
+  "Speaker.Registration.Form.Select_Tier" : "Selecionar Tier",
   "Speaker.Registration.Form.IBAN" : "IBAN/Conta",
   "Speaker.Registration.Form.Agency" : "Agência",
   "Speaker.Registration.Form.Swift" : "Rápida",
