adding new value in tier fiel

--- a/frontend/src/_metronic/i18n/messages/en.json
+++ b/frontend/src/_metronic/i18n/messages/en.json
@@ -167,6 +167,7 @@
   "Speaker.Registration.Form.Bank_Name" : "Bank Name",
   "Speaker.Registration.Form.AccountOwner" : "Account Owner",
 
+  "Speaker.Registration.Tier.Exceptional":"Exceptional",
   "Speaker.Registration.Tier.One":"Tier 1",
   "Speaker.Registration.Tier.Two":"Tier 2",
   "Speaker.Registration.Tier.Three":"Tier 3",
